--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,17 @@
 @tailwind utilities;
 
 .main-container {
-  background: rgb(13,9,80);
-  background: linear-gradient(90deg, rgba(13,9,80,1) 0%, rgba(38,38,175,1) 100%);
+  /* background: rgb(13,9,80);
+  background: linear-gradient(90deg, rgba(13,9,80,1) 0%, rgba(38,38,175,1) 100%); */
   width: 100%;
   height: 100vh;
+  background-color: #000;
 }
 
 /* styles.css */
+* {
+  color: white;
+}
 
 #tsparticles {
   position: fixed;
@@ -22,4 +26,12 @@
 
 .relative {
   position: relative;
+}
+
+.iframe {
+  position: fixed;
+  inset: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 2;
 }
